<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".LandingPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_combinedshape" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_group301copy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:paddingBottom="20dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg"
                android:drawableStart="@drawable/ic_group3copy__1_"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="register"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/collector"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_app"
            android:textColor="@color/corn_blue"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_group3copy3"
            android:textSize="22sp"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group2"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group4"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group14copy2"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group7"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group10"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group14"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group15"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="250dp"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <include layout="@layout/bottom_content_layout"/>

    </LinearLayout>

</ScrollView>